login y permisos completado

--- a/src/main/java/com/encosoft/vista/Login.form
+++ b/src/main/java/com/encosoft/vista/Login.form
@@ -137,6 +137,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="txtPass">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPassActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
